Fix scrollbars showing on Chrome v100

--- a/assets/chat/css/style.scss
+++ b/assets/chat/css/style.scss
@@ -132,6 +132,7 @@ hr {
     position: relative;
     width: 100%;
     height: 100%;
+    overflow: hidden;
 }
 #chat-output-frame {
     flex: 1;
